--- a/OFFERS-342/ru/index.html
+++ b/OFFERS-342/ru/index.html
@@ -334,17 +334,95 @@
           <div class="text">
             <p><b class="name">Мигель</b> <span>7 часов</span> </p>
             <p>
-              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. Давление перестало скакать, чувствую прилив сил и сахар стал заметно ниже. Очень доволен результатом.</p>
+              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. <a href="">Давление перестало скакать,</a> чувствую прилив сил и сахар стал заметно ниже. Очень доволен результатом.</p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>19</b></a>
           </div>
         </div>
         <div class="comment right">
-          <img src="img/ava1.png" alt="">
+          <img src="img/ava2.png" alt="">
           <div class="text">
-            <p><b class="name">Автор: Марк</b> <span>7 часов</span> </p>
+            <p><b class="name">Сара</b> <span>6 часов</span> </p>
             <p>
-              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. Давление перестало скакать, чувствую прилив сил и сахар стал заметно ниже. Очень доволен результатом.</p>
-            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>19</b></a>
+              Я все момневалась <a href="">купить</a> ли этот препарат бабуле.
+              Спасибо за совет.</p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>5</b></a>
+          </div>
+        </div>
+        <hr>
+        <div class="comment">
+          <img src="img/ava3.png" alt="">
+          <div class="text">
+            <p><b class="name">Жанна</b> <span>7 часов</span> </p>
+            <p>
+              наконец-то стала с радостью просыпаться по утрам, без отеков и тумана в голове. Спасибо создателям <a href="">CardioForte</a> и спасибо природе за такие ингредиенты.
+            </p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>32</b></a>
+          </div>
+        </div>
+        <hr>
+        <div class="comment">
+          <img src="img/ava4.png" alt="">
+          <div class="text">
+            <p><b class="name">Хосе</b> <span>8 часов</span> </p>
+            <p>
+              Да, состав прекрасный, все натуральное. Не люблю химию, но в наши дни так сложно найти что-то с таким натуральным составом. 
+</p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>4</b></a>
+          </div>
+        </div>
+        <div class="comment right">
+          <img src="img/ava5.png" alt="">
+          <div class="text">
+            <p><b class="name">Мария</b> <span>7 часов</span> </p>
+            <p>
+              принимаю месяц, побочных эффектов нет.<a href=""> Отметила улучшение самочувствия</a> и снижение давления. Рекомендую.
+            </p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>7</b></a>
+          </div>
+        </div>
+        <hr>
+        <div class="comment">
+          <img src="img/ava6.png" alt="">
+          <div class="text">
+            <p><b class="name">Ариадна</b> <span>11 часов</span> </p>
+            <p>
+              а вы все где заказывали? Я не очень люблю заказывать в интернете
+            </p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>14</b></a>
+          </div>
+        </div>
+        <div class="comment right">
+          <img src="img/ava7.png" alt="">
+          <div class="text">
+            <p><b class="name">Луиза</b> <span>9 часов</span> </p>
+            <p>
+              Лара, выше ссылка на <a href="">официальный сайт CardioForte.</a> Заказывать на нем очень легко, вам позвонит оператор. Пришло очень быстро. Не бойтесь
+</p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>1</b></a>
+          </div>
+        </div>
+        <hr>
+        <div class="comment">
+          <img src="img/ava8.png" alt="">
+          <div class="text">
+            <p><b class="name">Эльвира</b> <span>13 часов</span> </p>
+            <p>
+              Читаю вас и понимаю, что надо заказать! Надеюсь, мне подойдет и побочек не будет
+
+            </p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>27</b></a>
+          </div>
+        </div>
+        <hr>
+        <div class="comment">
+          <img src="img/ava9.png" alt="">
+          <div class="text">
+            <p><b class="name">Мария</b> <span>15 часов</span> </p>
+            <p>
+              это самое <a href="">ЛУЧШЕЕ средство,</a> заявляю, как гипертоник со стажем. Точнее, можно сказать уде бывший гипертоник
+
+            </p>
+            <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>41</b></a>
           </div>
         </div>
         <hr>
@@ -352,37 +430,54 @@
     </div>
 
     <div class="sidebar">
-      <div class="sidebar__top">
-        <p>Подписаться на актуальные нвости:</p>
-        <a href="" class="btn">Подписаться <img src="img/tlg.svg" alt=""></a>
+      <div class="sidebar__content">
+        <a href="">
+          <p class="sidebar__top">
+            избранное
+          </p>
+        </a>
+        <div class="sidebar__main">
+            <a href="">
+              <div class="sidebar__item">
+                <img src="img/side1.png" alt="">
+                <p>признаки того, что стоит поменять работу</p>
+              </div>
+            </a>
+            <a href="">
+              <div class="sidebar__item">
+                <img src="img/side2.png" alt="">
+                <p>Курс евро</p>
+              </div>
+            </a>
+            <a href="">
+              <div class="sidebar__item">
+                <img src="img/side3.png" alt="">
+                <p>как начать модельную карьеру после 40 лет?</p>
+              </div>
+            </a>
+            <a href="">
+              <div class="sidebar__item">
+                <img src="img/side4.png" alt="">
+                <p>сырьевые отрасли</p>
+              </div>
+            </a>
+            <a href="">
+              <div class="sidebar__item">
+                <img src="img/side5.png" alt="">
+                <p>7 самых стильных мужчин в мире</p>
+              </div>
+            </a>
+        </div>
+        
+            </div>
+            <a href="" class="banner">
+              <p>
+                Reno arkana <br>
+                скидки перед летом!
+              </p>
+              <span>Перейти</span>
+            </a>
       </div>
-      <div class="sidebar__main">
-        <h3>Главные новости</h4>
-          <a href="">
-            <div class="sidebar__item">
-              <img src="img/side1.png" alt="">
-              <p><b>Интервью с антропологом</b><span>Д-р Сванте Паабо рассказал нам, почему у нас есть высокая
-                  потребность в социализации</span></p>
-              <span class="dat">1 час назад</span>
-            </div>
-          </a>
-          <a href="">
-            <div class="sidebar__item">
-              <img src="img/side2.png" alt="">
-              <p><b>Байден назвал принца Филиппа «чертовски классным парнем»</b></p>
-              <span class="dat">10 минут назад</span>
-            </div>
-          </a>
-          <a href="">
-            <div class="sidebar__item">
-              <img src="img/side3.png" alt="">
-              <p><b>В Европе проверят связь между вакциной Johnson&Johnson и тромбозом</b></p>
-              <span class="dat">50 минут назад</span>
-            </div>
-          </a>
-      </div>
-
-    </div>
 
   </main>
 
