--- a/OFFERS-342/ru/index.html
+++ b/OFFERS-342/ru/index.html
@@ -21,31 +21,34 @@
     <div class="header__main">
       <div class="header__wrap header__wrap--main">
         <div class="top">
-          <span class="get-date " data-day-delay="0"> </span>
           <div class="user">
             <a href=""><img class="loop" src="img/loop.svg" alt=""></a>
             <span>|</span>
             <a href=""><img class="account" src="img/account.svg" alt=""> </a>
           </div>
+          <img src="img/logo.svg" alt="" class="header__logo">
         </div>
-        <div class="header__menu">
-          <div class="header__nav">
-            <a href="">экономика</a>
-            <a href="">мнение</a>
-            <a href="">Испания</a>
-            <a href="">спорт</a>
-            <a href="">телевидение</a>
-            <a href="">техногологии</a>
-            <a href="">локдаун</a>
-            <a href="">подкасты</a>
-            <a href="">кулинария</a>
-          </div>
-          <div class="header__mob">
-            <button><img src="img/humb.svg" alt=""></button>
-          </div>
+
+
+        <div class="header__mob">
+          <button><img src="img/humb.svg" alt=""></button>
         </div>
       </div>
-    </div>
+   
+    <div class="header__menu">
+      <div class="header__nav">
+        <a href="">экономика</a>
+        <a href="">мнение</a>
+        <a href="">Испания</a>
+        <a href="">спорт</a>
+        <a href="">телевидение</a>
+        <a href="">техногологии</a>
+        <a href="">локдаун</a>
+        <a href="">подкасты</a>
+        <a href="">кулинария</a>
+      </div>
+    </div> 
+  </div>
   </header>
 
   <main class="main">
@@ -334,7 +337,9 @@
           <div class="text">
             <p><b class="name">Мигель</b> <span>7 часов</span> </p>
             <p>
-              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. <a href="">Давление перестало скакать,</a> чувствую прилив сил и сахар стал заметно ниже. Очень доволен результатом.</p>
+              Спасибо за такую возможность! Принимаю уже 3й месяц, сейчас заказал еще флакон для жены. <a
+                href="">Давление перестало скакать,</a> чувствую прилив сил и сахар стал заметно ниже. Очень доволен
+              результатом.</p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>19</b></a>
           </div>
         </div>
@@ -354,7 +359,8 @@
           <div class="text">
             <p><b class="name">Жанна</b> <span>7 часов</span> </p>
             <p>
-              наконец-то стала с радостью просыпаться по утрам, без отеков и тумана в голове. Спасибо создателям <a href="">CardioForte</a> и спасибо природе за такие ингредиенты.
+              наконец-то стала с радостью просыпаться по утрам, без отеков и тумана в голове. Спасибо создателям <a
+                href="">CardioForte</a> и спасибо природе за такие ингредиенты.
             </p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>32</b></a>
           </div>
@@ -365,8 +371,9 @@
           <div class="text">
             <p><b class="name">Хосе</b> <span>8 часов</span> </p>
             <p>
-              Да, состав прекрасный, все натуральное. Не люблю химию, но в наши дни так сложно найти что-то с таким натуральным составом. 
-</p>
+              Да, состав прекрасный, все натуральное. Не люблю химию, но в наши дни так сложно найти что-то с таким
+              натуральным составом.
+            </p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>4</b></a>
           </div>
         </div>
@@ -375,7 +382,8 @@
           <div class="text">
             <p><b class="name">Мария</b> <span>7 часов</span> </p>
             <p>
-              принимаю месяц, побочных эффектов нет.<a href=""> Отметила улучшение самочувствия</a> и снижение давления. Рекомендую.
+              принимаю месяц, побочных эффектов нет.<a href=""> Отметила улучшение самочувствия</a> и снижение давления.
+              Рекомендую.
             </p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>7</b></a>
           </div>
@@ -396,8 +404,9 @@
           <div class="text">
             <p><b class="name">Луиза</b> <span>9 часов</span> </p>
             <p>
-              Лара, выше ссылка на <a href="">официальный сайт CardioForte.</a> Заказывать на нем очень легко, вам позвонит оператор. Пришло очень быстро. Не бойтесь
-</p>
+              Лара, выше ссылка на <a href="">официальный сайт CardioForte.</a> Заказывать на нем очень легко, вам
+              позвонит оператор. Пришло очень быстро. Не бойтесь
+            </p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>1</b></a>
           </div>
         </div>
@@ -419,7 +428,8 @@
           <div class="text">
             <p><b class="name">Мария</b> <span>15 часов</span> </p>
             <p>
-              это самое <a href="">ЛУЧШЕЕ средство,</a> заявляю, как гипертоник со стажем. Точнее, можно сказать уде бывший гипертоник
+              это самое <a href="">ЛУЧШЕЕ средство,</a> заявляю, как гипертоник со стажем. Точнее, можно сказать уде
+              бывший гипертоник
 
             </p>
             <a href="" class="comment__btn"><span>Ответить</span> <img src="img/like.svg" alt=""> <b>41</b></a>
@@ -437,47 +447,49 @@
           </p>
         </a>
         <div class="sidebar__main">
-            <a href="">
-              <div class="sidebar__item">
-                <img src="img/side1.png" alt="">
-                <p>признаки того, что стоит поменять работу</p>
-              </div>
-            </a>
-            <a href="">
-              <div class="sidebar__item">
-                <img src="img/side2.png" alt="">
-                <p>Курс евро</p>
-              </div>
-            </a>
-            <a href="">
-              <div class="sidebar__item">
-                <img src="img/side3.png" alt="">
-                <p>как начать модельную карьеру после 40 лет?</p>
-              </div>
-            </a>
-            <a href="">
-              <div class="sidebar__item">
-                <img src="img/side4.png" alt="">
-                <p>сырьевые отрасли</p>
-              </div>
-            </a>
-            <a href="">
-              <div class="sidebar__item">
-                <img src="img/side5.png" alt="">
-                <p>7 самых стильных мужчин в мире</p>
-              </div>
-            </a>
+          <a href="" class="sidebar__item">
+
+            <img src="img/side1.png" alt="">
+            <p>признаки того, что стоит поменять работу</p>
+
+          </a>
+          <a href="" class="sidebar__item">
+
+            <img src="img/side2.png" alt="">
+            <p>Курс евро</p>
+
+          </a>
+          <a href="" class="sidebar__item">
+
+            <img src="img/side3.png" alt="">
+            <p>как начать модельную карьеру после 40 лет?</p>
+
+          </a>
+          <a href="" class="sidebar__item">
+
+            <img src="img/side4.png" alt="">
+            <p>сырьевые отрасли</p>
+
+          </a>
+          <a href="" class="sidebar__item">
+
+            <img src="img/side5.png" alt="">
+            <p>7 самых стильных мужчин в мире</p>
+
+          </a>
         </div>
-        
-            </div>
-            <a href="" class="banner">
-              <p>
-                Reno arkana <br>
-                скидки перед летом!
-              </p>
-              <span>Перейти</span>
-            </a>
+
       </div>
+      <a href="" class="banner" style=" background-image: url(img/banner.jpg);">
+        <p>
+          Reno arkana <br>
+          скидки перед летом!
+          <br> <br>
+          <span>Перейти</span>
+        </p>
+
+      </a>
+    </div>
 
   </main>
 
