--- a/OFFERS-341/es/index.html
+++ b/OFFERS-341/es/index.html
@@ -303,6 +303,9 @@
             <a href="{offer}" target="_blank" class="comment__btn"><img src="img/repost.svg" alt></a>
           </div>
         </div>
+        <a href="{offer}" target="_blank" style="text-align: center; ">
+          <h2> Más información sobre el remedio natural Fortuflex</h2>
+        </a>
       </div>
     </div>
 
