--- a/OFFERS-342/ru-p100-cardioforte-ready/index.html
+++ b/OFFERS-342/ru-p100-cardioforte-ready/index.html
@@ -318,7 +318,7 @@
         </p>
         <h4><a href="{offer}" target="_blank">Внимание! CardioForte быстро распродается! Для заказа прямо сейчас перейдите по ссылке</a></h4>
         <a href="{offer}" target="_blank" style="text-align: center; ">
-          <h4>Закажите сейчас и получите бесплатную бутылку в подарок! Предложение ограничено до <span class="get-date "
+          <h4>Закажите сейчас и получите скидку 50%! Предложение ограничено до <span class="get-date "
               data-day-delay="-2"> </span></h4>
         </a>
         <a href="{offer}" target="_blank"><img style="width: 100%;" src="img/linc_2.png" alt=""></a>
