--- a/OFFERS-354/ru/index.html
+++ b/OFFERS-354/ru/index.html
@@ -19,12 +19,21 @@
   <header class="header">
 
     <div class="header__main">
-      <div class="content">
-        <div class="header__logo">
-          <img src="img/logo.svg" alt="">
-
+      <div class="container"> 
+        <div class="header__top">
+          <a href="">
+            <div class="header__mob">
+                <button><img src="img/humb.svg" alt=""></button>
+              </div>
+          </a>
+          <div class="header__logo">
+            <img src="img/logo.svg" alt="">
+          </div>
+          <img src="img/loop.svg" alt="">
         </div>
-        <div clas</div>s="header__menu">
+      </div>
+      <div class="container">
+        <div class="header__menu">
           <div class="header__nav">
             <a href="">экономика</a>
             <a href="">мнение</a>
@@ -36,32 +45,14 @@
             <a href="">подкасты</a>
             <a href="">кулинария</a>
           </div>
-          <div class="header__mob">
-            <button><img src="img/humb.svg" alt=""></button>
-          </div>
+         
         </div>
       
     </div>
   </header>
 
   <main class="main">
-    <div class="navbar">
-      <div class="navbar__author">
-        <h3 class="navbar__author--name">
-          Станислав
-          Седов
-        </h3>
-        <span class="navbar__author--span">
-          Специальный корреспондент
-        </span>
-        <a href="" class="navbar__author--nickname">
-          @stanislav
-        </a>
-        <p> Обновлено <span class="get-date " data-day-delay="1"> </span></p>
-      </div>
-      <a href=""><img src="img/uzer.svg" alt=""></a>
-      <a href="" class="navbar--btn btn"> Посмотреть комментарии</a>
-    </div>
+
     <div class="content">
       <div class="content__author">
         <a href="" class="acctive">Интервью</a>
