--- a/OFFERS-370/pt/index.html
+++ b/OFFERS-370/pt/index.html
@@ -23,7 +23,7 @@
 
 			<div class="intro__text">
 				<h2 class="left intro__title margin-left"> Bomba de banho Arco-íris com óleos essenciais</h2>
-				<div class="subtitle"> 00000</div>
+				<div class="subtitle"> Salão SPA em sua casa!</div>
 			</div>
 			<div class="triger">
 				<p> O melhor do<br> 2021!</p>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="sect6__item">
 					<div class="top"><img src="img/sect6_3.svg" alt> <b> Etapa 3</b></div>
-					<p> A encomenda será entregue por estafeta no prazo de 1-3 dias</p>
+					<p> A encomenda será entregue por estafeta no prazo de 2-5 dias</p>
 				</div>
 				<div class="sect6__item">
 					<div class="top"><img src="img/sect6_4.svg" alt> <b> Passo 4</b></div>
@@ -190,7 +190,7 @@
 
 				<div class="intro__text">
 					<h2 class="left intro__title margin-left"> Bomba de banho Arco-íris com óleos essenciais</h2>
-					<div class="subtitle"> 00000</div>
+					<div class="subtitle"> Salão SPA em sua casa!</div>
 				</div>
 				<div class="triger">
 					<p> O melhor do<br> 2021!</p>
