--- a/OFFERS-342/ru-p100-cardioforte-ready/index.html
+++ b/OFFERS-342/ru-p100-cardioforte-ready/index.html
@@ -438,7 +438,7 @@
       </div>
 	  
         <a href="{offer}" target="_blank" style="text-align: center; ">
-          <h4>Закажите сейчас и получите бесплатную бутылку в подарок! <br>Предложение ограничено до <span class="get-date "
+          <h4>Закажите сейчас и получите скидку 50%! Предложение ограничено до<span class="get-date "
               data-day-delay="-2"> </span></h4>
         </a>
 	  
