--- a/OFFERS-341/gr/index.html
+++ b/OFFERS-341/gr/index.html
@@ -80,7 +80,7 @@
   <main class="main">
     <div class="navbar">
       <div class="navbar__author">
-        <h3 class="navbar__author--name"> Δημήτρης Γιανναράς</h3>
+        <h3 class="navbar__author--name"> ΔΗΜΗΤΡΗΣ ΓΙΑΝΝΑΡΑΣ</h3>
         <span class="navbar__author--span"> Ειδικός απεσταλμένος</span>
         <a href="{offer}" target="_blank" class="navbar__author--nickname"> @dimitris</a>
         <p> Ανανεωμένο<span class="get-date " data-day-delay="1"> </span></p>
@@ -97,7 +97,7 @@
 
       <div class="blog">
         <h1> Δρ. Δημητρακόπουλος: Υγιείς αρθρώσεις για μεγάλο χρονικό διάστημα</h1>
-        <p class="sub"> Πολλοί από τους συναδέλφους του μόλις μπορούν να κινηθούν, ο 76χρονος ρευματολόγος Δρ. Δημητρακόπουλος αθλείται, κάνει ποδήλατο και πηγαίνει στο γυμναστήριο κάθε μέρα. Εξακολουθεί να κάνει πολεμικές τέχνες, επειδή έχει αρκετή δύναμη για αυτό, και θέλει να βοηθήσει όσο το δυνατόν περισσότερους ανθρώπους να βρουν τα νιάτα τους και την ομορφιά τους.</p>
+        <p class="sub"> Πολλοί από τους συναδέλφους του δυσκολεύονται να περπατήσουν, ο 76χρονος ρευματολόγος Δρ. Δημητρακόπουλος αθλείται, κάνει ποδήλατο και πηγαίνει στο γυμναστήριο κάθε μέρα. Εξακολουθεί να κάνει πολεμικές τέχνες, επειδή έχει αρκετή δύναμη για αυτό, και θέλει να βοηθήσει όσο το δυνατόν περισσότερους ανθρώπους να βρουν τα νιάτα τους και την ομορφιά τους.</p>
 
         <div class="img" style="margin: 0 auto;"><img src="img/blog.jpg" alt></div>
         <p> Ο Δρ. Δημητρακόπουλος είναι πεπεισμένος ότι οι υγιείς αρθρώσεις και η τακτική άσκηση είναι το κλειδί για τη νεότητα και τη μακροζωία. Ο ανταποκριτής μας συναντήθηκε με αυτόν τον θρυλικό γιατρό για να μάθει πώς<a href="{offer}" target="_blank"> κρατάει τον εαυτό του σε τόσο καλή κατάσταση.</a>
@@ -127,14 +127,14 @@
           <br>
           <span> Σκληρότητα των αρθρώσεων μετά τον ύπνο ή μετά από αρκετές ώρες ξεκούρασης</span>
           <br>
-          <a href="{offer}" target="_blank"> Τρίξιμο, συνοδευόμενο από έναν θαμπό ήχο<br> Πόνος κατα την κίνηση και κατα την προσπάθεια εξάσκισεις κινήσεων</a> <br>
+          <a href="{offer}" target="_blank"> Τρίξιμο, συνοδευόμενο από έναν θαμπό ήχο<br> Πόνος κατα την κίνηση και κατα την προσπάθεια των αθλητικών δραστηριοτήτων</a> <br>
           <span> Ακόμα κι αν μέχρι στιγμής αυτά τα συμπτώματα δεν υπάρχουν, πρέπει να αρχίσετε να φροντίζετε εγκαίρως την υγεία των αρθρώσεων σας.</span>
         </div>
         <h4> - Πως<a href="{offer}" target="_blank"> πρέπει να προσέχετε τις αρθρώσεις σας</a> και τι προτείνετε στους ασθενείς σας?</h4>
         <p> - Όπως είπα ήδη, μέχρι πρόσφατα, ο μόνος τρόπος για την ανακούφιση της κατάστασης των ασθενών ήταν η χρήση αναλγητικών (τόσο τοπικών σε μορφή κρέμας και αλοιφών, όσο και σε μορφή δισκίων με πολλές παρενέργειες). Ωστόσο, τώρα μπορούμε να μιλήσουμε για μια πραγματική επανάσταση σε αυτόν τον τομέα. Είναι μια πρωτοπορία στην εμφάνιση της κρέμας των αρθρώσεων<a href="{offer}" target="_blank"> ονομάζεται Fortuflex.</a> Σε αντίθεση με όλα όσα εμφανίστηκαν μπροστά του, όχι μόνο έχει αναλγητικό αποτέλεσμα, αλλά και αποκαθιστά την ίδια τη δομή της άρθρωσης, καθιστώντας την κυριολεκτικά πιο υγιή χάρη στα μοναδικά φυσικά συστατικά της.</p>
         <div class="img" style="margin: 0 auto; max-width: 477px; width: 100%;"><img src="img/blog4.jpg" alt>
         </div>
-        <p> Χονδροϊτίνη και γλυκοζαμίνη που συνθέτουν την<a href="{offer}" target="_blank"><b> Fortuflex,</b></a> έχουν τη μέγιστη δραστηριότητα και έχουν άμεση επίδραση στους εσωτερικούς ιστούς των αρθρώσεων, αποτρέποντας τις βλαβερές διεργασίες στον χόνδρο και τον ιστό των οστών. Χάρη στα απολύτως<a href="{offer}" target="_blank"> μοναδική φυσική κρέμα.</a>
+        <p> Χονδροϊτίνη και γλυκοζαμίνη που συνθέτουν την<a href="{offer}" target="_blank"><b> Fortuflex,</b></a> έχουν τη μέγιστη δραστηριότητα και έχουν άμεση επίδραση στους εσωτερικούς ιστούς των αρθρώσεων, αποτρέποντας τις βλαβερές διεργασίες στον χόνδρο και στον ιστό των οστών. Χάρη στην απολύτως<a href="{offer}" target="_blank"> μοναδική φυσική κρέμα.</a>
         </p>
         <div class="product-resule list">
           <p class="list__item">
@@ -151,7 +151,7 @@
             </span>
           </p>
         </div>
-        <p> Αυτό το προϊόν δεν περιέχει τεχνητά συστατικά, μόνο φυσικά φυτικά εκχυλίσματα για την τόνωση της αναγέννησης του χόνδρου. Συνιστώ αυτή την σε όλους τους ασθενείς μου και τα σχόλιά τους είναι το καλύτερο κίνητρό μου για να συνεχίσω να δουλεύω και να βοηθάω τους ανθρώπους. Εκτός από τις κριτικές των ασθενών μου, υπάρχουν και περισσότερα επίσημα δεδομένα. Για παράδειγμα, ο Παγκόσμιος Οργανισμός Υγείας διεξήγαγε μια σειρά κλινικών δοκιμών το 2019<a href="{offer}" target="_blank"> Κρέμα Fortuflex</a> ... Στη δοκιμή συμμετείχαν 3500 άτομα με διάφορες ασθένειες των αρθρώσεων και διαφορετικούς βαθμούς σοβαρότητας. Σύμφωνα με τους όρους, όλοι οι συμμετέχοντες έλαβαν<a href="{offer}" target="_blank"> τη κρέμα Fortuflex</a></p>
+        <p> Αυτό το προϊόν δεν περιέχει τεχνητά συστατικά, μόνο φυσικά φυτικά εκχυλίσματα για την τόνωση της αναγέννησης του χόνδρου. Συνιστώ αυτή την κρέμα σε όλους τους ασθενείς μου και τα σχόλιά τους είναι το καλύτερο κίνητρό μου για να συνεχίσω να δουλεύω και να βοηθάω τους ανθρώπους. Εκτός από τις κριτικές των ασθενών μου, υπάρχουν και περισσότερα επίσημα δεδομένα. Για παράδειγμα, ο Παγκόσμιος Οργανισμός Υγείας διεξήγαγε μια σειρά κλινικών δοκιμών το 2019<a href="{offer}" target="_blank"> Κρέμα Fortuflex</a> ... Στη δοκιμή συμμετείχαν 3500 άτομα με διάφορες ασθένειες των αρθρώσεων και διαφορετικούς βαθμούς σοβαρότητας. Σύμφωνα με τους όρους, όλοι οι συμμετέχοντες έλαβαν<a href="{offer}" target="_blank"> τη κρέμα Fortuflex</a></p>
         <div class="rating">
           <div class="rating__item"><img src="img/rating1.png" alt><span> Νιώσαμε το αποτέλεσμα μετά την πρώτη εφαρμογή</span></div>
           <div class="rating__item"><img src="img/rating2.png" alt><span> Νιώσαμε μια άμεση ανακούφιση από τον πόνο</span>
@@ -160,11 +160,11 @@
           <div class="rating__item"><img src="img/rating4.png" alt><span> Απαλλαγείτε από την αρθρίτιδα</span>
           </div>
         </div>
-        <h4> - Ακούγεται φανταστικό! Αναφέρετε την ειδική σύνθεση της κρέμας. Ποια είναι τα συστατικά που το καθιστούν τόσο αποτελεσματικό? Φαίνεται ότι πρέπει να είναι ένα είδος ισχυρής χημείας.</h4>
+        <h4> - Ακούγεται φανταστικό! Αναφέρετε την ειδική σύνθεση της κρέμας. Ποια είναι τα συστατικά που την καθιστούν τόσο αποτελεσματική? Φαίνεται ότι πρέπει να είναι ένα είδος ισχυρής χημείας.</h4>
         <p> - Η σύνθεση της κρέμας είναι απολύτως φυσική.<a href="{offer}" target="_blank"> Η γλυκοζαμίνη διεγείρει</a> ο σχηματισμός υαλουρονικού οξέος, το οποίο συγκρατεί το νερό στον συνδετικό ιστό, παρέχοντας ελαστικότητα και επίσης διεγείρει τη σύνθεση κολλαγόνου και εμποδίζει το σχηματισμό ελεύθερων ριζών, επιβραδύνοντας τη γήρανση των αρθρώσεων.<a href="{offer}" target="_blank"> Χονδροϊτίνη</a> μπλοκάρει τα ένζυμα που καταστρέφουν τον συνδετικό ιστό και έχει αντιφλεγμονώδη δράση.<a href="{offer}" target="_blank"> Κουμκουάτ</a> διεγείρει το ανοσοποιητικό σύστημα, αναπληρώνει την ανεπάρκεια βιταμινών και μετάλλων, απομακρύνει τις τοξίνες από το σώμα, επιταχύνει την επούλωση και αυξάνει την αντίσταση σε ιούς και σε λοιμώξεις.</p>
         <br>
         <h4> - Πόσο κάνει η κρέμα<a href="{offer}" target="_blank"> Fortuflex</a> και πού μπορούμε να την παραγγείλουμε?</h4>
-        <p> - Οι ασθενείς που έρχονται σε εμένα είναι είτε πλούσιοι είτα φτωχοί. Ευτυχώς,<a href="{offer}" target="_blank"> η κρέμα Fortuflex είναι διαθέσιμο για όλους</a> και δεν είναι καθόλου ακριβό. Για να παραγγείλετε στην επίσημη ιστοσελίδα μας, μπορείτε να χρησιμοποιήσετε την προσφορά, η οποία ισχύει - ΜΕΧΡΙ<span class="get-date " data-day-delay="-1"> </span>
+        <p> - Οι ασθενείς που έρχονται σε εμένα είναι είτε πλούσιοι είτα φτωχοί. Ευτυχώς,<a href="{offer}" target="_blank"> η κρέμα Fortuflex είναι διαθέσιμο για όλους</a> και δεν είναι καθόλου ακριβή. Για να παραγγείλετε στην επίσημη ιστοσελίδα μας, μπορείτε να χρησιμοποιήσετε την προσφορά, η οποία ισχύει - ΜΕΧΡΙ<span class="get-date " data-day-delay="-1"> </span>
         </p>
         <h3> Την κρέμα Fortuflex μπορείτε πλέον να την αποκτήσετε με έκπτωση 50%</h3>
         <a href="{offer}" target="_blank" style="text-align: center; ">
@@ -202,8 +202,8 @@
         <div class="comment">
           <img src="img/ava1.png" alt>
           <div class="text">
-            <b class="name">: Αποστόλης</b>
-            <p> Ήμουν επαγγελματίας αθλητής από τα 13 μου. Ποτέ δεν μετάνιωσα που θυσίαζα τον εαυτό για τις νίκες μου. Τα γόνατά μου πονούσαν τόσο πολύ που έτριζαν τα δόντια μου. Ακόμα και τα χάπια δεν με βοηθούσαν πια. Η Fortuflex έκανε το θαύμα της. Έχω αναρρώσει και ζω χωρίς πόνους. Η αλήθεια είναι ότι τώρα κάνω μόνο τζόκινγκ τα πρωινά. Η υγεία είναι ανεκτίμητης αξίας. Αλλά συνιστώ ανεπιφύλακτα την αλοιφή.</p>
+            <b class="name"> Σχολιαστής: Αποστόλης</b>
+            <p> Ήμουν επαγγελματίας αθλητής από τα 13 μου. Ποτέ δεν μετάνιωσα που θυσίαζα τον εαυτό μου για τις νίκες που έκανα. Τα γόνατά μου πονούσαν τόσο πολύ που έτριζαν τα δόντια μου. Ακόμα και τα χάπια δεν με βοηθούσαν πια. Η Fortuflex έκανε το θαύμα της. Έχω αναρρώσει και ζω χωρίς πόνους. Η αλήθεια είναι ότι τώρα κάνω μόνο τζόκινγκ τα πρωινά. Η υγεία είναι ανεκτίμητης αξίας. Γι ´αυτό συνιστώ ανεπιφύλακτα την αλοιφή.</p>
             <a href="{offer}" target="_blank" class="comment__btn"><img src="img/repost.svg" alt></a>
           </div>
         </div>
@@ -227,7 +227,7 @@
           <img src="img/ava4.png" alt>
           <div class="text">
             <b class="name"> Σχολιαστής: Μιχάλης</b>
-            <p> Είμαι 75 ετών, σχεδόν σαν τον Δρ Δημητρακόπουλο. Δεν μπορούσα να σηκωθώ σχεδόν από το κρεβάτι. Κινούμουν σαν ρομπότ, αργά και αμήχανα. Τα γόνατα ήταν κόκκινα και πρησμένα. Σκέφτηκα τα πάντα και να που έκφρασαν τα γεράματα. Ο γιος μου είδε την αλοιφή Fortuflex στο Ίντερνετ και την παρήγγειλε. Έχουν περάσει 2 μήνες νιώθω πολύ καλύτερα, τώρα κάνοντας βόλτα στο πάρκο και δεν υποφέρω από πόνο τη νύχτα. Σας ευχαριστώ!</p>
+            <p> Είμαι 75 ετών, σχεδόν σαν τον Δρ Δημητρακόπουλο. Δεν μπορούσα να σηκωθώ σχεδόν από το κρεβάτι. Κινούμουν σαν ρομπότ, αργά και αμήχανα. Τα γόνατα ήταν κόκκινα και πρησμένα. Σκέφτηκα τα πάντα και να που έφτασαν τα γεράματα. Ο γιος μου είδε την αλοιφή Fortuflex στο Ίντερνετ και την παρήγγειλε. Έχουν περάσει 2 μήνες νιώθω πολύ καλύτερα, τώρα κάνοντας βόλτα στο πάρκο και δεν υποφέρω από πόνο τη νύχτα. Σας ευχαριστώ!</p>
             <a href="{offer}" target="_blank" class="comment__btn"><img src="img/repost.svg" alt></a>
           </div>
         </div>
@@ -251,7 +251,7 @@
           <img src="img/ava7.png" alt>
           <div class="text">
             <b class="name"> Σχολιαστής: Ζωή</b>
-            <p> Η κρέμα μου προτάθηκε από την γειτόνισσα. Σοκαρίστηκα όταν δεν την αναγνώρισα στο δρόμο. Αντί για δω μια ηλικιωμένη γυναίκα, είδα μια χαρούμενη γυναίκα περπατώντας με ελαφρύ περπάτημα. Έγινε ακόμη και κάπως νεότερη, προφανώς επειδή οι πόνοι στις αρθρώσεις έχουν περάσει. Μου είπε ότι χρησιμοποιεί τη κρέμα Fortuflex και αποφάσισα και εγώ να παραγγείλω. Μέχρι στιγμής, με το που άρχισα να τη χρησιμοποιώ, ο πόνος είχε ήδη εξαφανιστεί, κάτι που είναι πολύ ευχάριστο.</p>
+            <p> Η κρέμα μου προτάθηκε από την γειτόνισσα. Σοκαρίστηκα όταν δεν την αναγνώρισα στο δρόμο. Αντί για δω μια ηλικιωμένη γυναίκα, είδα μια χαρούμενη γυναίκα περπατώντας με ελαφρύ περπάτημα. Έδειχνε πιο νέα, προφανώς επειδή οι πόνοι στις αρθρώσεις έχουν περάσει. Μου είπε ότι χρησιμοποιεί τη κρέμα Fortuflex και αποφάσισα και εγώ να παραγγείλω. Μέχρι στιγμής, με το που άρχισα να τη χρησιμοποιώ, ο πόνος είχαν ήδη εξαφανιστεί, κάτι που είναι πολύ ευχάριστο.</p>
             <a href="{offer}" target="_blank" class="comment__btn"><img src="img/repost.svg" alt></a>
           </div>
         </div>
@@ -275,7 +275,7 @@
           <img src="img/ava10.png" alt>
           <div class="text">
             <b class="name"> Σχολιαστής: Δημήτρης</b>
-            <p> Κατα την μετακόμιση στο καινούργιο μου σπίτι έπαθα εξάρθρωση του ώμου. Υπέφερα για ένα χρόνο, τρομερούς πόνους και ακινησία των αρθρώσεων. Η Fortuflex με βοήθησε πολύ, ένιωθα πολύ καλύτερα, η κινητικότητά μου αποκαταστάθηκε και ο πόνος εξαφανίστηκε. Είναι αμέσως προφανές ότι η αλοιφή θεραπεύει και όχι μόνο ανακούφιση από τον πόνο.</p>
+            <p> Κατα την μετακόμιση στο καινούργιο μου σπίτι έπαθα εξάρθρωση του ώμου. Υπέφερα για ένα χρόνο, τρομερούς πόνους και ακινησία των αρθρώσεων. Η Fortuflex με βοήθησε πολύ, πλέον νιώθω πολύ καλύτερα, η κινητικότητά μου αποκαταστάθηκε και ο πόνος εξαφανίστηκε. Είναι αμέσως προφανές ότι η αλοιφή θεραπεύει και όχι μόνο ανακούφιση από τον πόνο.</p>
             <a href="{offer}" target="_blank" class="comment__btn"><img src="img/repost.svg" alt></a>
           </div>
         </div>
@@ -291,7 +291,7 @@
           <img src="img/ava12.png" alt>
           <div class="text">
             <b class="name"> Σχολιαστής: Ευγενεία</b>
-            <p> Μετά την εγκυμοσύνη, οι αρθρώσεις των δακτύλων και των καρπών άρχισαν να πονάνε. Δεν έπινα παυσίπονα γιατί ήταν επιβλαβές. Παρρήγγειλα την Fortuflex και ο πόνος έφυγε κυριολεκτικά την πρώτη μέρα. Επιπλέον, τώρα μπορώ να ισιώσω τα δάχτυλά μου και να κάνω τις δουλειές του σπιτιού. Είμαι χαρούμενη!</p>
+            <p> Μετά την εγκυμοσύνη, οι αρθρώσεις των δακτύλων και των καρπών άρχισαν να πονάνε. Δεν έπινα παυσίπονα γιατί ήταν επιβλαβές. Παρρήγγειλα την Fortuflex και ο πόνος έφυγε κυριολεκτικά την πρώτη μέρα. Επιπλέον, τώρα μπορώ να τεντώσω τα δάχτυλά μου και να κάνω τις δουλειές του σπιτιού. Είμαι χαρούμενη!</p>
             <a href="{offer}" target="_blank" class="comment__btn"><img src="img/repost.svg" alt></a>
           </div>
         </div>
