--- a/OFFERS-354/ru/index.html
+++ b/OFFERS-354/ru/index.html
@@ -59,7 +59,7 @@
       <div class="blog">
         <h1>Возраст - не приговор для суставов!</h1>
 
-        <div class="bagr" style="margin: 0 auto; background-image: url(../../img/blog.jpg);">
+        <div class="bagr" style="margin: 0 auto; background-image: url(img/blog.jpg);">
           <p>
             90-летний ортопед-травматолог рассказывает, как сохранить суставы молодыми, подвижными, предотвратить риск
             снижения физической активности и, соответственно, качества жизни!
@@ -83,13 +83,15 @@
         </p>
 
         <div class="pfo" style="margin: 0 auto; max-width: 648px; width: 100%;">
+
           <h4>Степени развития артроза коленного сустава</h4>
 
-          <span>Разрушение суставного хряща</span> <span>Остеофиты
+
+          <span class="span-1">Разрушение суставного хряща</span> <span class="span-2">Остеофиты
             (костные разрастания)
             на суставных поверхностях</span>
-          <p><b>1 степень</b> <b>2 степень</b> <b>3 степень</b></p>
-          <p>прогрессирование заболевания</p>
+
+          <p class="degree"><b>1 степень</b> <b>2 степень</b> <b>3 степень</b></p>
         </div>
         <h4>- Господин Х, вы утверждаете, что здоровье человека в целом основано <a href="">на здоровых суставах.</a>
           Почему они так важны?</h4>
@@ -127,7 +129,7 @@
           случаях рекомендуют щадящую физическую нагрузку, чтобы <a href="">не способствовать перерастяжению связок</a>
           и снизить риск артроза.
         </p>
-        <div class="bagr" style="margin: 0 auto; background-image: url(../../img/blog3.jpg);">
+        <div class="bagr" style="margin: 0 auto; background-image: url(img/blog3.jpg);">
           <p>
             “Я до сих пор вожу машину, а для вождение нужна подвижность суставов ног и рук. Спортиные авто моя страсть!”
           </p>
@@ -303,195 +305,123 @@
         <a href="" style="text-align: center; ">
           <h2>Важно! Если вы поспешите, то успеете приобрести мазь с 50% скидкой здесь</h2>
         </a>
-
+        <br> <br>
+        <a href=""><img src="img/linck.png" alt=""></a>
       </div>
       <div class="comments">
         <div class="comments__form">
+          <img src="img/uzer.svg" alt="">
+          <div class="box">
+            <input type="text" placeholder="Введите ваше имя">
+            <textarea name="" id="" cols="30" rows="1" placeholder="Введите комментарий..."></textarea>
+            <a href="" class="btn">отправить</a>
+          </div>
 
-          <textarea name="" id="" cols="30" rows="1" placeholder="Введите комментарий..."></textarea>
-          <a href="" class="btn">отправить</a>
         </div>
         <br><br>
+        <h2>Комментарии</h2>
         <div class="comment">
           <img src="img/ava1.png" alt="">
           <div class="text">
-            <b class="name">Автор: Марк</b>
+            <b class="name">Луиза</b>
             <p>
-              Я в профессиональном спорте с 13 лет. Не жалел себя ради побед. Колени болели так, что аж зубы сводило.
-              Мне даже таблетки уже не помогали. FortuFlex просто творит чудеса. Я восстановился и живу без боли. Правда
-              из спорта теперь только пробежки по утрам. Здоровье дороже. Но мазь очень рекомендую.
+              Чудесное <a href="">средство!</a> Без преувеличений. Я не знаю, в каком состоянии сустав – не проходил
+              обследования, но о
+              болях забыл после применения <a href="">Фортуфлекс.</a>
+
             </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='9'></span></a>
           </div>
         </div>
         <div class="comment">
           <img src="img/ava2.png" alt="">
           <div class="text">
-            <b class="name">Автор: Сара</b>
+            <b class="name">Людмила</b>
             <p>
-              Как удачно зашла, как раз акция! Закажу бабули, у нее тоже колени болят сильно
+              Каждый раз, когда возникает ноющая боль в колене, втираю <a href="">мазь</a> и за пару секунд (буквально!)
+              чувствую
+              облегчение - могу уснуть без проблем. Никакой ибупрофен не дает такой результат.
+
             </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='8'></span></a>
           </div>
         </div>
-        <div class="comment right">
+        <div class="comment">
           <img src="img/ava3.png" alt="">
           <div class="text">
-            <b class="name">Автор: Вера</b>
+            <b class="name">Сан Саныч</b>
             <p>
-              Я тоже зашла заказать деду, ему немногие мази подходят. Хочу попробовать эту</p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+              Абсолютно безопасный и на удивление эффективный метод <a href="">лечения суставов.</a> Мои ноги с подагрой
+              сказали крему
+              «спасибо». Обязательный препарат в моей аптечке.</p>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='10'></span></a>
           </div>
         </div>
         <div class="comment">
           <img src="img/ava4.png" alt="">
           <div class="text">
-            <b class="name">Автор: Майкл</b>
+            <b class="name">Анатолий Сергеевич</b>
             <p>
-              Мне 75, почти как доктору Х. Я едва мог передвигаться по комнате. Двигался как робот, медленно и неуклюже.
-              Колени все красные были, опухшие. Думал все, старость пришла. Сын увидел в интернете мазь FortuFlex и
-              заказал. Прошло 2 месяца, мне намного лучше, я хожу гулять в парк и не мучаюсь от болей ночами. Спасибо!
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+              Доктору огромная благодарность за подробное раскрытие темы. Честно, никогда не интересовался суставами с
+              точки зрения устройства, причин <a href="">болей.</a> Думал – возрастное, никуда не денешься. Это – самая
+              большая ошибка
+              – мириться с болью в возрасте после 60 лет. НЕТ! Средство продляющее молодость суставов существует! Знаю
+              на своем опыте!</p>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='9'></span></a>
           </div>
         </div>
         <div class="comment">
           <img src="img/ava5.png" alt="">
           <div class="text">
-            <b class="name">Автор: Джоанна</b>
+            <b class="name">Виктор Ерези</b>
             <p>
-              Пришло быстро, через 2 дня. Буду пробовать, потом отпишусь о результатах.
+              Странно, что такой простой состав мази работает. Но это так! Дело наверное в формуле, соотношении,
+              возможно, еще есть второстепенные вещества,к оторые доставляют активные элемент по назначению – это чудо.
+              Настолько большая разница до и после применения. Рекомендую настоятельно.
             </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='6'></span></a>
           </div>
         </div>
-        <div class="comment right">
+        <div class="comment">
           <img src="img/ava6.png" alt="">
           <div class="text">
-            <b class="name">Автор: Симона</b>
+            <b class="name">Анастасия</b>
             <p>
-              Да, напишите о результатах, а то я сомневаюсь покупать или нет. Боюсь интернет-покупок.</p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
+              Полезная статья. Перешла <a href="">по ссылке</a> и заказала мазь. Спасибо.</p>
+            <a href="" class="comment__btn"><span class="get-date" data-day-delay='1'></span></a>
           </div>
         </div>
-        <div class="comment">
-          <img src="img/ava7.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Джулия</b>
-            <p>
-              Крем мне порекомендовала соседка. Я пришла в шок, когда не узнала ее на улице. Вместо старушки на встречу
-              мне шла бодрая женщина легкой походкой. Она даже как-то вся помолодела, видимо, потому что боли прошли.
-              Рассказала мне что пользуется кремом FortuFlex и я тоже решила заказать. Пока что только начала
-              пользоваться, но боль уже ушла, что очень радует.
-
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava8.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Анди</b>
-            <p>
-              Коллаген, гиаурон – это разве все не для женских кремов?
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment right">
-          <img src="img/ava9.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Мария</b>
-            <p>
-              Анди, коллаген – это очень важный компонент, обеспечивающий прочность хрящей, а гиаурон помогает
-              удерживать влагу, сохраняя эластичность суставов. Вы правы, эти компоненты важны и для кожи, и для
-              суставов. Это я вам как косметолог со стажем говорю.</p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava10.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Дэн</b>
-            <p>
-              Вывихнул плечо при переезде в новый дом. Мучался год, страшные боли и неподвижность сустава. FortuFlex
-              очень помог, мне намного лучше, восстановилась подвижность и пропала боль. Сразу видно, что мазь именно
-              лечит, а не просто обезболивает.
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava11.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Елена</b>
-            <p>
-              я бабушка пятерых внуков и больные суставы – моя профессиональная болезнь. Много носила их на руках и
-              суставы не выдержали. Дочь принесла крем FortuFlex, у нее коллега по работе его очень хвалила. Мне стало
-              намного лучше, уже могу купать внуков сама, без помощи.
-
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava12.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Лара</b>
-            <p>
-              После беременности стали сильно болеть суставы пальцев рук и запястья. Обезболивающие не пью, потому что
-              вредно. Заказала FortuFlex и боль прошла буквально на первый день. К тому же, теперь могу разогнуть пальцы
-              и делать все по дому. Счастлива!
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
-        <div class="comment">
-          <img src="img/ava13.png" alt="">
-          <div class="text">
-            <b class="name">Автор: Эван</b>
-            <p>
-              Надо успеть заказать пока акция не закончилась. Хочется еще пожить полноценной жизнью. Мне 72, и только
-              что встретил свою любовь, так что здоровые коленки мне просто необходимы.
-
-            </p>
-            <a href="" class="comment__btn"><img src="img/repost.svg" alt=""></a>
-          </div>
-        </div>
+        <a href="" style="text-align: center; ">
+          <h2>Читать еще 321 комментариев</h2>
+        </a>
       </div>
     </div>
 
     <div class="sidebar">
-      <div class="sidebar__top">
-        <p>Подписаться на актуальные нвости:</p>
-        <a href="" class="btn">Подписаться <img src="img/tlg.svg" alt=""></a>
-      </div>
-      <div class="sidebar__main">
-        <h3>Главные новости</h4>
-          <a href="">
-            <div class="sidebar__item">
-              <img src="img/side1.png" alt="">
-              <p><b>Интервью с антропологом</b><span>Д-р Сванте Паабо рассказал нам, почему у нас есть высокая
-                  потребность в социализации</span></p>
-              <span class="dat">1 час назад</span>
-            </div>
-          </a>
-          <a href="">
-            <div class="sidebar__item">
-              <img src="img/side2.png" alt="">
-              <p><b>Байден назвал принца Филиппа «чертовски классным парнем»</b></p>
-              <span class="dat">10 минут назад</span>
-            </div>
-          </a>
-          <a href="">
-            <div class="sidebar__item">
-              <img src="img/side3.png" alt="">
-              <p><b>В Европе проверят связь между вакциной Johnson&Johnson и тромбозом</b></p>
-              <span class="dat">50 минут назад</span>
-            </div>
-          </a>
-      </div>
-
+      <a  href="" class="sidebar__new">
+        <p>
+          hechosnews24
+          Прямой эффир из нашей студии
+        </p>
+      </a>
+      <a href="" class="sidebar__new">
+        <p>
+          hechos
+          телевидение
+        </p>
+        <span>Перейти на страницу <b> 101</b></span>
+        <span>Перейти на страницу <b> 101</b></span>
+      </a>
+      <a href="" class="sidebar__new">
+       <span>День Земли</span>
+       <p>ДЕНЬ ЗЕМЛИ 
+        ЕМУ ИСПОЛНЯЕТСЯ 50 ЛЕТ. МАРАФОН ОНЛАЙН И В ТЕЛЕВИЗОР ДЛЯ НАШЕГО 
+        ПЛАНЕТА</p>
+      </a>
+      <a class="sidebar__new">
+        <p>Динамика роста заболевший</p>
+       </a>
+       
     </div>
 
   </main>
